--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,12 @@ button, .sign {
 
 button:hover {
     opacity: 0.65;
+    cursor: pointer;
 }
 
 .sign:hover {
     background-color: gray;
+    cursor: pointer;
 }
 
   
